--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="mini"></div>
                 </div>
                 <div>
-                    <div class="mini">test</div>
+                    <div class="mini"></div>
                     <div class="mini"></div>
                 </div>
             </div>    
